--- a/UE1/styles/style.css
+++ b/UE1/styles/style.css
@@ -27,6 +27,14 @@ header {
     align-items: center;
 }
 
+.logoheadline {
+    flex-grow: 1;
+}
+
+.form {
+    padding: 2em 1.5em;
+}
+
 .logo {
     margin-right: 0.5em;
 }
@@ -48,7 +56,7 @@ footer {
     display: block;
     text-decoration: none;
     color: #fff;
-    border-radius: 0.2em;
+    border-radius: 0.4em;
     border: 1px solid #003B7C;
     background: -webkit-linear-gradient(#006BAC, #003B7C); /*Safari 5.1-6*/
     background: -o-linear-gradient(#006BAC, #003B7C); /*Opera 11.1-12*/
@@ -57,6 +65,7 @@ footer {
     font-size: 15px;
     padding: 0.8em 0.3em;
     flex-basis: 50%;
+    justify-content: center;
 }
 
 .form {
@@ -91,17 +100,89 @@ footer {
 .formsubmit {
     display: flex;
     align-items: center;
-    justify-content: center;
-    flex-direction: row;
+    margin-left: 25%;
+    height: 5em;
+}
+
+.navigation-menu {
+    padding: 0.85em 1.3em;
+    background: -webkit-linear-gradient(#006BAC, #003B7C); /*Safari 5.1-6*/
+    background: -o-linear-gradient(#006BAC, #003B7C); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(#006BAC, #003B7C); /*Fx 3.6-15*/
+    background: linear-gradient(#006BAC, #003B7C); /*Standard*/
+    font-size: 15px;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 0.4em;
+    border: 1px solid #003B7C;
+
+}
+
+.navigation-menu-small {
+    padding: 0.85em 1.3em;
+    background: -webkit-linear-gradient(#006BAC, #003B7C); /*Safari 5.1-6*/
+    background: -o-linear-gradient(#006BAC, #003B7C); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(#006BAC, #003B7C); /*Fx 3.6-15*/
+    background: linear-gradient(#006BAC, #003B7C); /*Standard*/
+    font-size: 15px;
+    margin: 0;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 0.4em;
+    border: 1px solid #003B7C;
+}
+
+span.navigation-menu-small {
+    display:inline-block;
+    float: right;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    padding: 0.85em 1.3em;
+    background: -webkit-linear-gradient(#006BAC, #003B7C); /*Safari 5.1-6*/
+    background: -o-linear-gradient(#006BAC, #003B7C); /*Opera 11.1-12*/
+    background: -moz-linear-gradient(#006BAC, #003B7C); /*Fx 3.6-15*/
+    background: linear-gradient(#006BAC, #003B7C); /*Standard*/
+    font-size: 15px;
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #003B7C;
+}
+
+.navigation-menu-small:hover .dropdown-content {
+    display:block;
 }
 
 @media (max-width: 399px) {
-    .form {
-        padding: 2em 1.5em;
-    }
 
     .submit {
         flex-basis: 100%;
+    }
+}
+
+@media (max-width: 599px) {
+    .hidesmall {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
+    }
+}
+
+@media (min-width: 600px) {
+    .hidebig {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
     }
 }
 
