--- a/UE1/styles/style.css
+++ b/UE1/styles/style.css
@@ -52,6 +52,8 @@ footer {
     height: 7em;
 }
 
+
+
 .submit {
     display: block;
     text-decoration: none;
@@ -161,6 +163,12 @@ span.navigation-menu-small {
 
 .navigation-menu-small:hover .dropdown-content {
     display:block;
+}
+
+.divider{
+    width:5px;
+    height:auto;
+    display:inline-block;
 }
 
 @media (max-width: 399px) {
