--- a/UE1/styles/style.css
+++ b/UE1/styles/style.css
@@ -52,8 +52,6 @@ footer {
     height: 7em;
 }
 
-
-
 .submit {
     display: block;
     text-decoration: none;
@@ -68,6 +66,15 @@ footer {
     padding: 0.8em 0.3em;
     flex-basis: 50%;
     justify-content: center;
+}
+
+.divider{
+    width: 5px;
+    height: auto;
+    display: inline-block;
+}
+.input-group{
+    float: right;
 }
 
 .form {
@@ -91,7 +98,6 @@ footer {
 
 .formfield input {
     height: 2em;
-    padding: 0.5em;
     border: 1px solid #ccc;
     box-sizing: border-box;
     border-radius: 5px;
@@ -166,16 +172,26 @@ span.navigation-menu-small {
     display:block;
 }
 
-.divider{
-    width:5px;
-    height:auto;
-    display:inline-block;
+.boxed {
+    border: 1px solid gray;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
-.input-group{
-	float: right;
+.sidebar{
+
+    float: right;
+    position: right-side;
+    border: 1px solid black;
+    width: 100px;
+
 }
 
+.content{
+    float: left;
+}
+
+
 @media (max-width: 399px) {
+
     .submit {
         flex-basis: 100%;
         width: 100%;
@@ -216,10 +232,33 @@ span.navigation-menu-small {
     .formsubmit {
         width: 75%;
     }
+
+    .sidebar{
+        float: right;
+        width: 30%;
+        padding: 0 1em 0 1em;
+    }
+}
+
+@media (min-width: 768px){
+    .sidebar{
+        float: right;
+        width: 30%;
+    }
+
+    .content{
+        margin-right: 1em;
+    }
 }
 
 @media (min-width: 1200px) {
     .form {
         padding: 2em 6em;
     }
+
+    .sidebar{
+        float: right;
+        width: 30%;
+    }
+
 }
