styles + login 100% options + overview 99% TODO: resolve the error: "Element div not allowed as child of element span in this context. "

--- a/UE1/styles/style.css
+++ b/UE1/styles/style.css
@@ -166,6 +166,11 @@ span.navigation-menu {
     background: #fff;
 }
 
+.boxed:hover{
+
+    border: 0.4em solid blue;
+}
+
 .devicePicture {
     float: left;
     height: 100%;
@@ -270,8 +275,6 @@ span.navigation-menu {
     .formrow label {
         width: 47%;
         display: flex;
-        align-content: left;
-        justify-content: left;
     }
 
     .submit {
