--- a/UE2/app/views/login.html
+++ b/UE2/app/views/login.html
@@ -13,7 +13,7 @@
 </div>
 
 <header aria-labelledby="bannerheadline">
-  <a href="login.html">
+  <a href="login">
     <img class="title-image" src="../../images/big-logo-small.png" alt="BIG Smart Home logo">
   </a>
   <h1 class="header-title" id="bannerheadline">
@@ -27,7 +27,7 @@
 </header>
 <div class="main-container">
   <main aria-labelledby="formheadline">
-    <form class="form" method="post" action="overview.html">
+    <form class="form" method="post" (ngSubmit)="onSubmit()" action="/overview">
       <h2 id="formheadline" class="registration-headline">Anmelden</h2>
       <div class="form-row">
         <label class="form-label" for="username-input">
