worked on detail

--- a/UE2/app/views/details.html
+++ b/UE2/app/views/details.html
@@ -1,5 +1,4 @@
 <div class="main-container">
-
   <aside class="sidebar" aria-labelledby="serverinfoheadline">
     <div class="server-info-container">
       <h2 class="accessibility" id="serverinfoheadline">Serverstatus</h2>
@@ -27,7 +26,7 @@
   </aside>
   <main aria-labelledby="deviceheadline" class="details-container">
     <div attr.data-device-id="19ff7d47-bd80-4a5d-adfb-bc77558facad" class="details-headline">
-      <h2 class="main-headline" id="deviceheadline">Heizkörper Badezimmer</h2>
+      <h2 class="main-headline" id="deviceheadline">device.display_name</h2>
     </div>
     <div class="details-holder">
 
