--- a/UE2/app/views/overview.html
+++ b/UE2/app/views/overview.html
@@ -27,9 +27,9 @@
   <main aria-labelledby="devicesheadline">
     <h2 class="main-headline" id="devicesheadline">Geräte</h2>
     <div class="devices">
-      <div *ngFor="let device of devices" class="device-outer" (click)="goToDetail(device)"  > <!-- TODO: [data-device-id]=device.id -->
+      <div *ngFor="let device of devices" class="device-outer"> <!-- TODO: [data-device-id]=device.id -->
 
-        <a href="javascript:void(0)" class="device"
+        <a [routerLink]="['../detail', device.id]" class="device"
            title="{{device.description}}">
           <dl class="device-properties">
             <dt>Anzeigename</dt>
