--- a/UE2/app/views/app-component.html
+++ b/UE2/app/views/app-component.html
@@ -13,7 +13,7 @@
 </div>
 
 <header aria-labelledby="bannerheadline">
-    <a href="overview"><img class="title-image" src="../../images/big-logo-small.png" alt="BIG Smart Home logo"></a>
+    <a [routerLink]="['/overview']"><img class="title-image" src="../../images/big-logo-small.png" alt="BIG Smart Home logo">a</a>
 
     <h1 class="header-title" id="bannerheadline">
         BIG Smart Home
