Password Validation on Options is working Overview with the possibility to edit name is working

--- a/UE2/app/views/login.html
+++ b/UE2/app/views/login.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <main aria-labelledby="formheadline">
-    <form class="form" method="post" (ngSubmit)="onSubmit()" action="/overview">
+    <form class="form" (ngSubmit)="onSubmit()">
       <h2 id="formheadline" class="registration-headline">Anmelden</h2>
       <div class="form-row">
         <label class="form-label" for="username-input">
