--- a/UE2/app/views/app-component.html
+++ b/UE2/app/views/app-component.html
@@ -5,6 +5,7 @@
     <title>BIG Smart Home - Optionen</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../styles/style.css">
+    <script src="../../scripts/jquery.js"></script>
 </head>
 <body data-decimal-separator="," data-grouping-separator=".">
 
@@ -13,7 +14,7 @@
 </div>
 
 <header aria-labelledby="bannerheadline">
-    <a [routerLink]="['/overview']"><img class="title-image" src="../../images/big-logo-small.png" alt="BIG Smart Home logo">a</a>
+    <a [routerLink]="['/overview']"><img class="title-image" src="../../images/big-logo-small.png" alt="BIG Smart Home logo"></a>
 
     <h1 class="header-title" id="bannerheadline">
         BIG Smart Home
@@ -24,10 +25,10 @@
             <li class="nav-items">
                 <ul>
                     <li>
-                        <a href="options" class="button" accesskey="2">Optionen</a>
+                        <a [routerLink]="['/options']" class="button" accesskey="2">Optionen</a>
                     </li>
                     <li>
-                        <a href="login" class="button" accesskey="1">Abmelden</a>
+                        <a [routerLink]="['/login']" class="button" accesskey="1">Abmelden</a>
                     </li>
                 </ul>
             </li>
