--- a/UE2/app/views/options.html
+++ b/UE2/app/views/options.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <main aria-labelledby="formheadline">
-    <form class="form" #f="ngForm" novalidate (ngSubmit)="save(f.value, f.valid)">
+    <form class="form" (ngSubmit)="onSubmit()">
       <h2 id="formheadline" class="options-headline">Passwort ändern</h2>
       <div class="form-row">
         <label class="form-label" for="old-password-input">
@@ -15,20 +15,21 @@
           Neues Passwort
         </label>
         <input type="password" name="password" id="new-password-input" placeholder="Neues Passwort" required
-               class="form-input" minlength="8" validateEqual="repeatPassword" reverse="true"
+               class="form-input" minlength="8"
                maxlength="12" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,12}">
+        <span id="new-password-error" class="error-text"></span>
       </div>
       <div class="form-row">
         <label class="form-label" for="repeat-password-input">
           Passwort wiederholen
         </label>
         <input type="password" name="repeatPassword" id="repeat-password-input" placeholder="Neues Passwort wiederholen"
-               required class="form-input" minlength="8" validateEqual="password"
+               required class="form-input" minlength="8"
                maxlength="12" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,12}">
-        <span id="new-password-error" class="error-text"></span>
+        <span id="password-mismatch-error" class="error-text">password mismatch</span>
       </div>
       <div class="form-row form-row-center">
-        <button id="save-changes-button" class="button button-submit" [disabled]="!myForm.valid">
+        <button id="save-changes-button" class="button button-submit" disabled>
           Änderung speichern
         </button>
       </div>
