--- a/UE2/app/views/details.html
+++ b/UE2/app/views/details.html
@@ -31,85 +31,12 @@
     <div class="details-holder">
 
       <!-- Steuerung für kontinuierliche Werte -->
-      <div *ngIf="cont" class="details-outer">
-        <div class="details-image-container">
-          <img class="details-image" src="../../images/placeholder_continuous.PNG">
-        </div>
-        <div class="details-data">
-          <label class="accessibility" for="details-log">Letzte Werteänderungen</label>
-          <textarea id="details-log" class="detail-logs" placeholder="Gerätelog" readonly rows="6">6.3.2017 10:01:30: 20 -> 25
-          </textarea>
-          <div class="details-settings">
-            <h3 class="details-headline">Temperatur einstellen</h3>
+      <chart-comp *ngIf="cont" [control_units]="cont"></chart-comp>
 
-            <form class="update-form" method="post">
-              <label class="update-form-field" id="current-value">
-                <span class="current-value">derzeit: 0</span>
-              </label>
-              <label class="accessibility" for="new-value">Bitte gewünschten Wert eingeben.</label>
-              <input type="number" step="0.01" min="0" max="50" id="new-value" value="1"
-                     class="update-form-field form-input" name="new-value" required>
-              <input type="submit" id="submit-value" class="update-form-field button" name="submit-value"
-                     value="Wert setzen">
-            </form>
-          </div>
-        </div>
-      </div>
+      <chart-comp *ngIf="bool" [control_units]="bool"></chart-comp>
 
-      <!-- Steuerung für diskrete Werte -->
-      <div *ngIf="enu" class="details-outer">
-        <div class="details-image-container">
-          <img class="details-image" src="../../images/placeholder_enum.PNG">
-        </div>
-        <div class="details-data">
-          <label class="accessibility" for="details-log">Letzte Werteänderungen</label>
-          <textarea id="details-log" class="detail-logs" placeholder="Gerätelog" readonly rows="6">6.3.2017 10:02:32: Ein -> Standby</textarea>
-          <div class="details-settings">
-            <h3 class="details-headline">Gerätezustand einstellen</h3>
+      <chart-comp *ngIf="enu" [control_units]="enu"></chart-comp>
 
-            <form class="update-form" method="post">
-              <label class="update-form-field" id="current-value">
-                <span class="current-value">derzeit: Standby</span>
-              </label>
-              <label class="accessibility" for="new-value">Bitte gewünschten Wert aus Menü auswählen.</label>
-              <select id="new-value" class="update-form-field form-input" name="new-value" required>
-                <option>Aus</option>
-                <option>Ein</option>
-                <option selected>Standby</option>
-              </select>
-              <input type="submit" id="submit-value" class="update-form-field button" name="submit-value"
-                     value="Wert setzen">
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <!-- Steuerung für boolesche Werte -->
-      <div *ngIf="bool" class="details-outer">
-        <div class="details-image-container">
-          <img class="details-image" src="../../images/placeholder_boolean.PNG">
-        </div>
-        <div class="details-data">
-          <label class="accessibility" for="details-log">Letzte Werteänderungen</label>
-          <textarea id="details-log" class="detail-logs" placeholder="Gerätelog" readonly rows="6">6.3.2017 10:03:30: Aus -> An</textarea>
-          <div class="details-settings">
-            <h3 class="details-headline">Ein-/Ausschalten</h3>
-
-            <form class="update-form" method="post">
-
-              <label class="update-form-field" id="current-value">
-                <span class="current-value">derzeit: Aktiviert</span>
-              </label>
-
-              <label class="accessibility" for="new-value">Bitte gewünschten Wert auswählen.</label>
-              <input type="checkbox" id="new-value" class="update-checkbox-input form-input" checked
-                     name="new-value">
-              <input type="submit" id="submit-value" class="update-form-field button" name="submit-value"
-                     value="Wert setzen">
-            </form>
-          </div>
-        </div>
-      </div>
     </div>
 
   </main>
