change password done

--- a/UE2/app/views/options.html
+++ b/UE2/app/views/options.html
@@ -7,7 +7,7 @@
           Altes Passwort
         </label>
         <input type="password" name="password" id="old-password-input" required class="form-input"
-               placeholder="Altes Passwort">
+               placeholder="Altes Passwort" [(ngModel)]="oldPass">
         <span id="old-password-error" class="error-text"></span>
       </div>
       <div class="form-row">
@@ -15,7 +15,7 @@
           Neues Passwort
         </label>
         <input type="password" name="password" id="new-password-input" placeholder="Neues Passwort" required
-               class="form-input" minlength="8"
+               class="form-input" minlength="8" [(ngModel)]="newPass" #np="ngModel"
                maxlength="12" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,12}">
         <span id="new-password-error" class="error-text"></span>
       </div>
@@ -24,12 +24,13 @@
           Passwort wiederholen
         </label>
         <input type="password" name="repeatPassword" id="repeat-password-input" placeholder="Neues Passwort wiederholen"
-               required class="form-input" minlength="8"
-               maxlength="12" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,12}">
+               required class="form-input" minlength="8" [(ngModel)]="repeatNP" #rp="ngModel"
+               maxlength="12" pattern="(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z]).{8,12}">
         <span id="password-mismatch-error" class="error-text">password mismatch</span>
       </div>
       <div class="form-row form-row-center">
-        <button id="save-changes-button" class="button button-submit" disabled>
+        <!--button id="save-changes-button" class="button button-submit" disabled-->
+        <button id="save_changes_button" class="button button-submit" [disabled] ="!f.form.valid || !isTrue()" (click)="onSave()">
           Änderung speichern
         </button>
       </div>
