--- a/UE2/app/views/charts/linechart.html
+++ b/UE2/app/views/charts/linechart.html
@@ -21,7 +21,7 @@
                 </label>
                 <label class="accessibility" for="new-value">Bitte gewünschten Wert eingeben.</label>
                 <input type="number" step="0.01" min="0" max="50" id="new-value" value="1"
-                       class="update-form-field form-input" name="new-value" ngModel ngList="" required>
+                       class="update-form-field form-input" name="new-value" ngModel required>
                 <input type="submit" id="submit-value" class="update-form-field button" name="submit-value"
                        value="Wert setzen">
             </form>
