--- a/UE2/app/views/login.html
+++ b/UE2/app/views/login.html
@@ -1,3 +1,14 @@
+<div role="navigation" aria-label="jumplinks">
+  <a href="#deviceheadline" class="accessibility">Zum Inhalt springen</a>
+</div>
+
+<header aria-labelledby="bannerheadline">
+  <a [routerLink]="['/overview']"><img class="title-image" src="../../images/big-logo-small.png" alt="BIG Smart Home logo"></a>
+
+  <h1 class="header-title" id="bannerheadline">
+    BIG Smart Home
+  </h1>
+</header>
 <div class="main-container">
   <main aria-labelledby="formheadline">
     <form class="form" (ngSubmit)="onSubmit()">
