--- a/UE2/app/views/overview.html
+++ b/UE2/app/views/overview.html
@@ -72,8 +72,7 @@
             <dd class="device-name">{{device.type_name}}</dd>
           </dl>
           <div class="device-image-container">
-            <img class="device-image" width="180" height="180" src="../../{{device.image}}"
-                 alt="{{device.image_alt}}">
+            <div class="device_image"></div>
           </div>
         </a>
         <ul class="device-actions">
