changed password - Done!

--- a/UE2/app/views/overview.html
+++ b/UE2/app/views/overview.html
@@ -72,7 +72,7 @@
             <dd class="device-name">{{device.type_name}}</dd>
           </dl>
           <div class="device-image-container" >
-            <div id="image_{{device.id}}"></div>{{drawSVG(device)}}
+            <div class="device-image" width="180" height="180" id="image_{{device.id}}"></div>{{drawSVG(device)}}
           </div>
         </a>
         <ul class="device-actions">
