init in overview done for svg function calls

--- a/UE2/app/views/overview.html
+++ b/UE2/app/views/overview.html
@@ -57,7 +57,7 @@
   <main aria-labelledby="devicesheadline">
     <h2 class="main-headline" id="devicesheadline">Geräte</h2>
     <div class="devices">
-      <div *ngFor="let device of devices" class="device-outer"> <!-- TODO: needs to be implemented [data-device-id]=device.id -->
+      <div *ngFor="let device of devices" class="device-outer"[attr.data-device-id]="device.id">
         <a class="device" (click)="linkToDetails(device)"
            title="{{device.description}}">
           <dl class="device-properties">
