--- a/UE2/app/views/charts/boolchart.html
+++ b/UE2/app/views/charts/boolchart.html
@@ -18,7 +18,7 @@
                 </label>
 
                 <label class="accessibility" for="new-value">Bitte gewünschten Wert auswählen.</label>
-                <input type="checkbox" id="new-value" class="update-checkbox-input form-input" checked
+                <input type="checkbox" id="new-value" class="update-checkbox-input form-input"
                        name="new-value" ngModel >
                 <input type="submit" id="submit-value" class="update-form-field button" name="submit-value"
                        value="Wert setzen">
