--- a/UE2/app/views/charts/linechart.html
+++ b/UE2/app/views/charts/linechart.html
@@ -20,7 +20,7 @@
                     <span class="current-value">derzeit: {{currentVal}}</span>
                 </label>
                 <label class="accessibility" for="new-value">Bitte gewünschten Wert eingeben.</label>
-                <input type="number" step="0.01" min="0" max="50" id="new-value" value="1"
+                <input type="number" step="0.01" min="{{device.min}}" max="{{device.max}}" id="new-value"
                        class="update-form-field form-input" name="new-value" ngModel required>
                 <input type="submit" id="submit-value" class="update-form-field button" name="submit-value"
                        value="Wert setzen">
