--- a/UE2/app/views/charts/linechart.html
+++ b/UE2/app/views/charts/linechart.html
@@ -1,6 +1,7 @@
 <div class="details-outer">
     <div class="details-image-container">
         <canvas baseChart width="400" height="400"
+                [control_units]="cont"
                 [datasets]="lineChartData"
                 [labels]="lineChartLabels"
                 [options]="lineChartOptions"
